// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectorGroup > should render with default styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-0>div:not(:last-child) {
  margin-right: 16px;
}

.circuit-1 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 4px;
}

.circuit-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.circuit-2 label {
  height: 100%;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-3:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-3:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-3:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-3:disabled+label,
.circuit-3[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-3:disabled+label::before,
.circuit-3[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-3:disabled:checked+label,
.circuit-3[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-3:disabled:checked+label::before,
.circuit-3[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
  width: 100%;
}

.circuit-4::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-4:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-4:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<div>
  <fieldset
    class="circuit-0"
  >
    <legend
      class="circuit-1"
    >
      Choose an option
    </legend>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":r1:"
        name=":r0:"
        type="radio"
        value="first"
      />
      <label
        class="circuit-4"
        for=":r1:"
      >
        Option 1
      </label>
    </div>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":r2:"
        name=":r0:"
        type="radio"
        value="second"
      />
      <label
        class="circuit-4"
        for=":r2:"
      >
        Option 2
      </label>
    </div>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":r3:"
        name=":r0:"
        type="radio"
        value="third"
      />
      <label
        class="circuit-4"
        for=":r3:"
      >
        Option 3
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`SelectorGroup > should render with horizontal layout by default 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: auto;
}

.circuit-0>div:not(:last-child) {
  margin-right: 16px;
}

.circuit-1 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 4px;
}

.circuit-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.circuit-2 label {
  height: 100%;
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-3:focus+label::before {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-3:focus+label::before::-moz-focus-inner {
  border: 0;
}

.circuit-3:focus:not(:focus-visible)+label::before {
  box-shadow: none;
}

.circuit-3:checked+label {
  background-color: var(--cui-bg-accent);
}

.circuit-3:checked+label::before {
  border: 2px solid var(--cui-border-accent);
}

.circuit-3:disabled+label,
.circuit-3[disabled]+label {
  pointer-events: none;
  background-color: var(--cui-bg-normal-disabled);
  color: var(--cui-fg-normal-disabled);
}

.circuit-3:disabled+label::before,
.circuit-3[disabled]+label::before {
  border: 2px solid var(--cui-border-normal-disabled);
}

.circuit-3:disabled:checked+label,
.circuit-3[disabled]:checked+label {
  background-color: var(--cui-bg-accent-disabled);
}

.circuit-3:disabled:checked+label::before,
.circuit-3[disabled]:checked+label::before {
  border: 2px solid var(--cui-border-accent-disabled);
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  color: var(--cui-fg-normal);
  text-align: center;
  position: relative;
  border-radius: 8px;
  -webkit-transition: box-shadow 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out;
  padding: calc(12px) 24px;
  width: 100%;
}

.circuit-4::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid var(--cui-border-normal);
  -webkit-transition: border 120ms ease-in-out;
  transition: border 120ms ease-in-out;
}

.circuit-4:hover {
  background-color: var(--cui-bg-normal-hovered);
  color: var(--cui-fg-normal-hovered);
}

.circuit-4:hover::before {
  border-color: var(--cui-border-normal-hovered);
}

.circuit-4:active {
  background-color: var(--cui-bg-normal-pressed);
  color: var(--cui-fg-normal-pressed);
}

.circuit-4:active::before {
  border-color: var(--cui-border-normal-pressed);
}

<div>
  <fieldset
    class="circuit-0"
  >
    <legend
      class="circuit-1"
    >
      Choose an option
    </legend>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":rh:"
        name=":rg:"
        type="radio"
        value="first"
      />
      <label
        class="circuit-4"
        for=":rh:"
      >
        Option 1
      </label>
    </div>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":ri:"
        name=":rg:"
        type="radio"
        value="second"
      />
      <label
        class="circuit-4"
        for=":ri:"
      >
        Option 2
      </label>
    </div>
    <div
      class="circuit-2"
    >
      <input
        class="circuit-3"
        id=":rj:"
        name=":rg:"
        type="radio"
        value="third"
      />
      <label
        class="circuit-4"
        for=":rj:"
      >
        Option 3
      </label>
    </div>
  </fieldset>
</div>
`;
